--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,6 +65,36 @@
         app:layout_constraintStart_toEndOf="@+id/assets_edit_text"
         app:layout_constraintTop_toTopOf="@+id/assets_edit_text" />
 
+
+    <TextView
+        android:id="@+id/proxy_edit_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/proxy_edit_label"
+        app:layout_constraintBottom_toTopOf="@+id/proxy_edit_text"
+        app:layout_constraintStart_toStartOf="@+id/proxy_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/assets_edit_text" />
+
+    <EditText
+        android:id="@+id/proxy_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/proxy_address"
+        app:layout_constraintEnd_toStartOf="@+id/proxy_edit_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/proxy_edit_label" />
+
+    <Button
+        android:id="@+id/proxy_edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/proxy_edit_text"
+        app:layout_constraintTop_toTopOf="@+id/proxy_edit_text" />
+
     <Button
         android:id="@+id/server_button"
         android:layout_width="wrap_content"
@@ -83,7 +113,7 @@
         android:text="@string/server_help_text"
         app:layout_constraintEnd_toEndOf="@+id/assets_edit_button"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/assets_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/assets_edit_text" />
+        app:layout_constraintStart_toStartOf="@+id/proxy_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/proxy_edit_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
